5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1644_2703.log
== TEST (2019-04-04 20:25:02) 
-- CODE:
idade = float(input('DFigite sua idade: '))

if idade: >= 18
	print(eleitor)
	
else:
	print(nao_eleitor)
-- ERROR:
File "XXXX", line 3
    if idade: >= 18
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:25:34) 
-- CODE:
idade = float(input('DFigite sua idade: '))

if idade (>= 18):
	print(eleitor)
	
else:
	print(nao_eleitor)
-- ERROR:
File "XXXX", line 3
    if idade (>= 18):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:26:11) 
-- CODE:
idade = float(input('DFigite sua idade: '))

if (idade >= 18):
	print(eleitor)
	
else:
	print(nao_eleitor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:27:32) 
-- CODE:
idade = float(input('DFigite sua idade: '))

if (idade >= 18):
	print(eleitor)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:27:49) 
-- CODE:
idade = float(input('Digite sua idade: '))

if (idade >= 18):
	print(eleitor)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:28:16) 
-- CODE:
idade = float(input('Digite sua idade: (eleitor/nao_eleitor) '))

if (idade >= 18):
	print(eleitor)
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(nao_eleitor)
NameError: name 'nao_eleitor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:33:05) 
-- CODE:
idade = float(input('Digite sua idade: (eleitor/nao_eleitor) '))

if (idade >= 18):
	print('eleitor')
	
else:
	print('nao_eleitor')
	

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 20:33:19) 
-- CODE:
idade = float(input('Digite sua idade:  '))

if (idade >= 18):
	print('eleitor')
	
else:
	print('nao_eleitor')
	

-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 20:33:37) 
-- CODE:
idade = float(input('Digite sua idade:  '))

if (idade >= 18):
	print('eleitor')
	
else:
	print('nao_eleitor')
	

-- EXECUTION TIME:
0.279937
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
